--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
+  - source .travis/precommit.sh
   - pytest # or py.test for Python versions 3.5 and below
