change source to sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - sh .travis/precommit.sh
+  - .travis/precommit.sh
   - pytest # or py.test for Python versions 3.5 and below
