--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
 # command to run tests
 script:
   - /bin/bash .travis/precommit.sh
-  - pytest # or py.test for Python versions 3.5 and below
+  - python -m unittest app
